{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 56,
  "lineage": "3b604bb4-e7fe-97ac-9a18-5b9c490a227d",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:loadbalancer/app/spa-alb/2de3c364c42505df",
            "arn_suffix": "app/spa-alb/2de3c364c42505df",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "spa-alb-1245660167.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:loadbalancer/app/spa-alb/2de3c364c42505df",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "spa-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-04b8c50013d37b312"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0057d221c19de0302"
              },
              {
                "subnet_id": "subnet-098ee06686332b9b5"
              }
            ],
            "subnets": [
              "subnet-0057d221c19de0302",
              "subnet-098ee06686332b9b5"
            ],
            "tags": {
              "Name": "spa-alb"
            },
            "tags_all": {
              "Name": "spa-alb"
            },
            "vpc_id": "vpc-09c4be30ed3c6694f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:loadbalancer/app/spa-alb/2de3c364c42505df"
          },
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_subnet-1a.aws_subnet.this",
            "module.alb_subnet-1c.aws_subnet.this",
            "module.spa_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:listener/app/spa-alb/2de3c364c42505df/12bdf056aefe9ea7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found (Managed by Terraform)",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:listener/app/spa-alb/2de3c364c42505df/12bdf056aefe9ea7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:loadbalancer/app/spa-alb/2de3c364c42505df",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:listener/app/spa-alb/2de3c364c42505df/12bdf056aefe9ea7"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb_sg.aws_security_group.this",
            "module.alb_subnet-1a.aws_subnet.this",
            "module.alb_subnet-1c.aws_subnet.this",
            "module.spa_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "s3_dir1_redirect",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "spa-y-okamura-dev-2026.s3-website-ap-northeast-1.amazonaws.com",
                    "path": "/dir1/#{path}",
                    "port": "80",
                    "protocol": "HTTP",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:listener-rule/app/spa-alb/2de3c364c42505df/12bdf056aefe9ea7/ffde85cf17414942",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/dir1/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:listener-rule/app/spa-alb/2de3c364c42505df/12bdf056aefe9ea7/ffde85cf17414942",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:listener/app/spa-alb/2de3c364c42505df/12bdf056aefe9ea7",
            "priority": 10,
            "region": "ap-northeast-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:listener-rule/app/spa-alb/2de3c364c42505df/12bdf056aefe9ea7/ffde85cf17414942"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb_sg.aws_security_group.this",
            "module.alb_subnet-1a.aws_subnet.this",
            "module.alb_subnet-1c.aws_subnet.this",
            "module.spa_s3.aws_s3_bucket.this",
            "module.spa_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "s3_dir2_redirect",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "spa-y-okamura-dev-2026.s3-website-ap-northeast-1.amazonaws.com",
                    "path": "/dir2/#{path}",
                    "port": "80",
                    "protocol": "HTTP",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:listener-rule/app/spa-alb/2de3c364c42505df/12bdf056aefe9ea7/83029767b96b5323",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/dir2/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:listener-rule/app/spa-alb/2de3c364c42505df/12bdf056aefe9ea7/83029767b96b5323",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:listener/app/spa-alb/2de3c364c42505df/12bdf056aefe9ea7",
            "priority": 20,
            "region": "ap-northeast-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:245040175022:listener-rule/app/spa-alb/2de3c364c42505df/12bdf056aefe9ea7/83029767b96b5323"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb_sg.aws_security_group.this",
            "module.alb_subnet-1a.aws_subnet.this",
            "module.alb_subnet-1c.aws_subnet.this",
            "module.spa_s3.aws_s3_bucket.this",
            "module.spa_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:245040175022:security-group/sg-04b8c50013d37b312",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b8c50013d37b312",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-alb-sg",
            "name_prefix": "",
            "owner_id": "245040175022",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-alb-sg"
            },
            "tags_all": {
              "Name": "dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c4be30ed3c6694f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "245040175022",
            "id": "sg-04b8c50013d37b312",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.spa_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_subnet-1a",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0365d3233ef431334",
            "id": "r-rtb-02831034d30c1c01e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-02831034d30c1c01e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "245040175022",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-02831034d30c1c01e"
          },
          "dependencies": [
            "module.alb_subnet-1a.aws_route_table.this",
            "module.igw.aws_internet_gateway.this",
            "module.spa_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_subnet-1a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:245040175022:route-table/rtb-02831034d30c1c01e",
            "id": "rtb-02831034d30c1c01e",
            "owner_id": "245040175022",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "spa-public-subnet-1a-rt"
            },
            "tags_all": {
              "Name": "spa-public-subnet-1a-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c4be30ed3c6694f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "245040175022",
            "id": "rtb-02831034d30c1c01e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.spa_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_subnet-1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0677f8ca7e535197f",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-02831034d30c1c01e",
            "subnet_id": "subnet-0057d221c19de0302"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_subnet-1a.aws_route_table.this",
            "module.alb_subnet-1a.aws_subnet.this",
            "module.spa_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_subnet-1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:245040175022:subnet/subnet-0057d221c19de0302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0057d221c19de0302",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245040175022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "spa-public-subnet-1a"
            },
            "tags_all": {
              "Name": "spa-public-subnet-1a"
            },
            "vpc_id": "vpc-09c4be30ed3c6694f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "245040175022",
            "id": "subnet-0057d221c19de0302",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.spa_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_subnet-1c",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0365d3233ef431334",
            "id": "r-rtb-027b781d69a66f2eb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-027b781d69a66f2eb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "245040175022",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-027b781d69a66f2eb"
          },
          "dependencies": [
            "module.alb_subnet-1c.aws_route_table.this",
            "module.igw.aws_internet_gateway.this",
            "module.spa_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_subnet-1c",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:245040175022:route-table/rtb-027b781d69a66f2eb",
            "id": "rtb-027b781d69a66f2eb",
            "owner_id": "245040175022",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "spa-public-subnet-1c-rt"
            },
            "tags_all": {
              "Name": "spa-public-subnet-1c-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c4be30ed3c6694f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "245040175022",
            "id": "rtb-027b781d69a66f2eb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.spa_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_subnet-1c",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd25559fa41a021d",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-027b781d69a66f2eb",
            "subnet_id": "subnet-098ee06686332b9b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_subnet-1c.aws_route_table.this",
            "module.alb_subnet-1c.aws_subnet.this",
            "module.spa_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_subnet-1c",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:245040175022:subnet/subnet-098ee06686332b9b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098ee06686332b9b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245040175022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "spa-public-subnet-1c"
            },
            "tags_all": {
              "Name": "spa-public-subnet-1c"
            },
            "vpc_id": "vpc-09c4be30ed3c6694f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "245040175022",
            "id": "subnet-098ee06686332b9b5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.spa_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:245040175022:internet-gateway/igw-0365d3233ef431334",
            "id": "igw-0365d3233ef431334",
            "owner_id": "245040175022",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "spa-igw"
            },
            "tags_all": {
              "Name": "spa-igw"
            },
            "vpc_id": "vpc-09c4be30ed3c6694f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.spa_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.spa_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:245040175022:vpc/vpc-09c4be30ed3c6694f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c347a81054ce709",
            "default_route_table_id": "rtb-0859d275254afc0a1",
            "default_security_group_id": "sg-0ca078dc0a3b25c29",
            "dhcp_options_id": "dopt-06af782e2f86d0898",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c4be30ed3c6694f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0859d275254afc0a1",
            "owner_id": "245040175022",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "spa-vpc"
            },
            "tags_all": {
              "Name": "spa-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "245040175022",
            "id": "vpc-09c4be30ed3c6694f",
            "region": "ap-northeast-1"
          }
        }
      ]
    }
  ]
}